# njmoSitter

./: .gitignore  CHRISTMASS.commit  README.md  Undefined.xlsx
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: babysitter.1485883413903.pdom  babysitter.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/babysitter/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/babysitter/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/babysitter/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_1
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/1/5/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.ubuntu_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
Njmositter-app/app/: build.gradle  proguard-rules.pro
Njmositter-app/app/src/androidTest/java/com/example/njmo/njmositter_app/: ExampleInstrumentedTest.java
Njmositter-app/app/src/main/: AndroidManifest.xml
Njmositter-app/app/src/main/cpp/: native-lib.cpp
Njmositter-app/app/src/main/res/layout/: activity_main.xml
Njmositter-app/app/src/main/res/values/: strings.xml
babysitter/: .cproject  .project  Makefile  babysitter.cpp
docs/: BGs.docx  Planning.xlsx  R1_wstep.txt  R2_istniejace_rozwiazania.txt  R3_wykorzystane technologie.txt  R4_projekt systemu.txt  UML.mdj  User Stories.xlsx  njmositter
linux_stuff/: build.sh  project.alliases
rpi/: .cproject  .project  CMakeLists.txt  Makefile
rpi/application/: CMakeLists.txt  Makefile  Nanny.cpp  Nanny.hpp  main.cpp  rpi.cpp
rpi/application/Make/: libServer.mk  libTest.mk
rpi/application/device/: CMakeLists.txt  Camera.cpp  Camera.hpp  Microphone.cpp  Microphone.hpp  Motor.cpp  Motor.hpp  MusicPlayer.cpp  MusicPlayer.hpp
rpi/application/event/: CMakeLists.txt  EEventType.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventMain.cpp  EventMain.hpp  EventQueue.cpp  EventQueue.hpp
rpi/application/event/core/: EventHandler.cpp  EventHandler.hpp  EventMain.cpp  EventMain.hpp
rpi/application/event/event_data/: MusicPlayerData.hpp  TestData.hpp  TimeoutData.hpp
rpi/application/event/executors/: CMakeLists.txt  CameraCaptureExecutor.cpp  CameraCaptureExecutor.hpp  EventExecutor.cpp  EventExecutor.hpp  MotorExecutor.cpp  MotorExecutor.hpp  MusicPlayerExecutor.cpp  MusicPlayerExecutor.hpp  TestExecutor.cpp  TestExecutor.hpp  TimeoutExecutor.cpp  TimeoutExecutor.hpp  VoiceRecorderExecutor.cpp  VoiceRecorderExecutor.hpp
rpi/application/event/executors/TestExecutor/: TestExecutor.cpp
rpi/application/event/queue/: CMakeLists.txt  Event.hpp  EventQueue.cpp  EventQueue.hpp  EventType.hpp  Response.hpp  Waiter.hpp  WaitingRoom.cpp  WaitingRoom.hpp
rpi/application/event/responses/: MusicPlayerResponse.hpp  TestResponse.hpp
rpi/application/inc/: Logger.hpp  Messages.hpp  defines.hpp
rpi/application/interface/data/: CameraData.hpp  MicrophoneData.hpp
rpi/application/interface/message/: CameraRequest.hpp  DeregisterUser.hpp  MotorRequest.hpp  NannyRequest.hpp  NotifyRequest.hpp  RegisterUser.hpp
rpi/application/interface/response/: CameraCaptureResponse.hpp  MusicPlayerResponse.hpp  NannyResponse.hpp  NotifyResponse.hpp  RegisterResponse.hpp  VideoRecorderResponse.hpp
rpi/application/nanny/: CMakeLists.txt  ChainEventController.cpp  ChainEventController.hpp  Nanny.cpp  Nanny.hpp  User.cpp  User.hpp
rpi/application/server/: CMakeLists.txt  Makefile  Makefile.mk  NannyServer.cpp  NannyServer.hpp  PhoneThread.cpp  PhoneThread.hpp  phoneThread.cpp  phoneThread.h  testSource.cpp  testSource.h
rpi/application/server/inc/: phoneThread.h
rpi/application/server/src/: phoneThread.cpp
rpi/application/testLibrary/: CMakeLists.txt  Makefile.mk  testClass.cpp  testClass.h
rpi/application/utils/: Broadcaster.cpp  Broadcaster.hpp  CMakeLists.txt  InterfaceFinder.cpp  InterfaceFinder.hpp  Time.hpp  Timer.hpp
rpi/application/utils/Logger/: Logger.cpp  Logger.hpp
rpi/application/utils/timeout_generator/: TimeoutGenerator.cpp  TimeoutGenerator.hpp
rpi/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
rpi/cmake/application/: Makefile  application  cmake_install.cmake
rpi/cmake/application/event/: Makefile  cmake_install.cmake
rpi/cmake/application/event/executors/: Makefile  cmake_install.cmake
rpi/cmake/application/event/queue/: Makefile  cmake_install.cmake
rpi/cmake/application/testLibrary/: Makefile  cmake_install.cmake
rpi/cmake/application/utils/: Makefile  cmake_install.cmake
rpi/tests/: CMakeLists.txt  Makefile  Makefile.local  test.cpp
rpi/tests/ApplicationTests/: TestList.mk
rpi/tests/ApplicationTests/OtherBasicTest/: OtherBasicTest.cpp  TestList.mk
rpi/tests/ApplicationTests/OtherOtherBasicTest/: TestList.mk
rpi/tests/Event/: TestEventHandler.cpp  TestEventMain.cpp
rpi/tests/Make/: ApplicationTests.mk
rpi/tests/OtherBasicTest/: BasicTest.cpp  BasicTest2.cpp  someheader.hpp
rpi/tests/OtherOtherBasicTest/: BasicTest3.cpp
rpi/tests/event/: TestEventHandler.cpp  TestEventQueue.cpp
(+5 files in other folders)
