cmake_minimum_required(VERSION 2.8.11)
project(server)
add_definitions("-std=c++14 -Ofast -fPIC")
aux_source_directory("${PROJECT_SOURCE_DIR}/src" SRC_LIST)
add_library(${PROJECT_NAME} STATIC  ${SRC_LIST})
target_link_libraries("${PROJECT_NAME}" LINK_PUBLIC EventQueue)
target_include_directories(${PROJECT_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/inc")
target_include_directories(${PROJECT_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/../inc")